# n00dles-py

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
n00dles/: __init__.py  testing.py
n00dles/core/: agent.py  context.py  executor.py  pipeline.py  retry.py  state.py
n00dles/providers/: __init__.py  base.py  litellm_provider.py
n00dles/telemetry/: __init__.py  events.py  tracer.py
n00dles/telemetry/exporters/: otel.py
tests/: conftest.py  test_agent.py  test_branch.py  test_parallel.py  test_pipeline.py  test_retry.py  test_run.py  test_state.py  test_testing.py
