[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "n00dles"
version = "0.1.0"
description = "Open-source multi-agent AI orchestration. Chain agents, manage state, handle failures — without 800 lines of boilerplate."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "n00dles", email = "hello@n00dles.com" },
]
keywords = ["llm", "agents", "orchestration", "ai", "pipeline", "multi-agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "litellm>=1.40",
  "pydantic>=2.0",
  "typing_extensions>=4.0",
]

[project.optional-dependencies]
otel = ["opentelemetry-sdk>=1.20", "opentelemetry-api>=1.20"]
redis = ["redis[hiredis]>=5.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.urls]
Homepage = "https://n00dles.com"
Documentation = "https://docs.n00dles.com"
Repository = "https://github.com/n00dlehouse/n00dles"
Issues = "https://github.com/n00dlehouse/n00dles/issues"

[tool.hatch.build.targets.wheel]
packages = ["n00dles"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
